# clams-aws

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: lib.rs
tests/: Makefile  it_s3.rs
